Fixed whitespace on news sidebar

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -14,6 +14,10 @@
 	padding: 10px;
 }
 
+.side-content {
+    margin-left: -30px;
+}
+
 .infobox
 {
 	background: #222;
